refactoring, added a new exception, created a game constants enum, added comments